--- a/public/allPosts.html
+++ b/public/allPosts.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="UTF-8">
+	<title>Title</title>
 </head>
 <body>
-$END$
+<div class="navbar">
+	<a class="settings" href="/account/settings/" style="float: right">Account</a>
+	<a href="/display/">Book something new!</a>
+	<a href="/book/new/">Create a new listing to be booked!</a>
+</div>
+{{range .}}
+<div class="wrapper">
+	<h1>{{.Title}}</h1>
+	<h2>{{.Desc}}</h2>
+	<h4>{{.Author}}</h4>
+</div>
+{{end}}
 </body>
 </html>
+<style>
+	.wrapper {
+		border: blue 2px solid;
+		border-radius: 45px;
+		margin-left: 10px;
+		margin-top: 10px;
+		width: 50%;
+		padding: 20px;
+	}
+	h2 {
+		font-family: "Andale Mono", monospace;
+		color: black;
+		font-weight: bolder;
+		font-size: 20px;
+	}
+	h1 {
+		text-transform: capitalize;
+		font-family: "Verdana", sans-serif;
+		font-weight: normal;
+	}
+	h4 {
+		font-size: 16px;
+		font-weight: normal;
+		font-family: "Times New", sans-serif;
+	}
+	
+	body {
+		height: auto;
+		background-color: dimgrey;
+	}
+	.navbar * {
+		float: left;
+		font-family: ".AppleSystemUIFont", sans-serif;
+		font-weight: normal;
+		padding: 10px 50px;
+		color: white;
+	}
+	.navbar a:hover {
+		background-color: #0c0c0c;
+		border-color: #6959dc;
+		
+	}
+	.navbar a {
+		border: 3px solid darkslateblue;
+		border-radius: 15px;
+		text-decoration: none;
+		font-size: 17px;
+		transition: 0.5s;
+	}
+	.navbar {
+		z-index: 100;
+		position: static;
+		width: 100%;
+		overflow: auto;
+		background-color: #555;
+		border-radius: 10px;
+	}
+	@media screen and (max-width: 500px) {
+		.navbar a {
+			float: none;
+			display: block;
+		}
+	}
+</style>
