--- a/public/account.html
+++ b/public/account.html
@@ -7,47 +7,37 @@
 <body>
 <div class="navbar">
 	<a class="settings" href="/account/settings/" style="float: right">Account</a>
+	<a href="/display/">Book something new!</a>
 	<a href="/mainpage/">Go back to the main page.</a>
 	<a href="/book/new/">Create a new listing to be booked!</a>
 </div>
-{{range .}}
-<div class="wrapper">
-	<h1>{{.Title}}</h1>
-	<h2>{{.Desc}}</h2>
-	<h4>{{.Author}}</h4>
+<div class="acntInfo">
+	<h1>{{.User}}</h1>
+	<h3>Account email:</h3><h2>{{.Email}}</h2>
 </div>
-{{end}}
 </body>
 </html>
 <style>
-	.wrapper {
-		border: blue 2px solid;
-		border-radius: 45px;
-		margin-left: 10px;
-		margin-top: 10px;
-		width: 50%;
-		padding: 20px;
+	h1 {
+		padding: 25px;
+		margin: auto;
+		width: min-content;
+		font-family: Verdana, sans-serif;
 	}
 	h2 {
+		position: relative;
+		top: 25vh;
+		width: min-content;
+		margin: auto;
 		font-family: "Andale Mono", monospace;
-		color: black;
-		font-weight: bolder;
-		font-size: 20px;
 	}
-	h1 {
-		text-transform: capitalize;
-		font-family: "Verdana", sans-serif;
-		font-weight: normal;
-	}
-	h4 {
-		font-size: 16px;
-		font-weight: normal;
-		font-family: "Times New", sans-serif;
-	}
-	
-	body {
-		height: auto;
-		background-color: dimgrey;
+	h3 {
+		font-family: "Arial Black", sans-serif;
+		position: relative;
+		font-size: larger;
+		top: 33.6vh;
+		left: 30vw;
+		padding: 15px;
 	}
 	.navbar * {
 		float: left;
@@ -56,6 +46,7 @@
 		padding: 10px 50px;
 		color: white;
 	}
+	
 	.navbar a:hover {
 		background-color: #0c0c0c;
 		border-color: #6959dc;
@@ -81,5 +72,9 @@
 			float: none;
 			display: block;
 		}
+	}
+	body {
+		height: auto;
+		background-color: dimgrey;
 	}
 </style>
